<resources>
    <string name="app_name">AndroidRestaurant</string>
    <string name="pageTitle">Welcome</string>
    <string name="starter_button">STARTER</string>
    <string name="dish_button">Dish</string>
    <string name="dessert_button">Dessert</string>
    <string name="starter_page_title">Starter page</string>
    <string name="app_title">STEAKHOUSE</string>
    <string name="adresseText">12 Rue de la soie (open in Google Maps)</string>
    <string name="descriptionPlat">Dish description</string>
    <string name="card_price">12,90€</string>
    <string name="ingredientsList">Ingredients :   </string>
    <string name="totalPrice">Total Price : </string>
    <string name="validate_cart">Order</string>


    <string name="title_activity_login">Login</string>


    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label">Register</string>

    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="adresse">Your adress</string>
    <string name="your_name">First Name</string>
    <string name="lastname">Last Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>