<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="796dp"
        android:layout_height="930dp"
        app:layout_constraintBottom_toBottomOf="@+id/dessert_button"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/image" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/app_title"
        android:textColor="#F6F6F6"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/starter_button"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:backgroundTint="@color/pink"
        android:drawablePadding="8dp"
        android:fontFamily="@font/oswald_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingBottom="0dp"
        android:text="@string/starter_button"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="36sp"
        app:icon="@drawable/ic_salad"
        app:iconPadding="32dp"
        app:layout_constraintBottom_toTopOf="@+id/dish_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dish_button"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/oswald_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/dish_button"
        android:textAlignment="viewStart"
        android:textSize="36sp"
        app:icon="@drawable/ic_burger"
        app:iconPadding="32dp"
        app:layout_constraintBottom_toTopOf="@+id/dessert_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dessert_button"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/oswald_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/dessert_button"
        android:textAlignment="viewStart"
        android:textSize="36sp"
        app:icon="@drawable/ic_cupcake"
        app:iconPadding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/adresseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_bold"
        android:text="@string/adresseText"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>